--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "howler": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "wavesurfer.js": "^6.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
